Adaptar-se a la Normativa de API REST de Govern Digital #46
