# evidenciesib-api-externa/openapi/openapi_evidencies.json
@@ -1,41 +1,35 @@
 {
   "openapi" : "3.0.1",
   "info" : {
-    "title" : "API REST EXTERNA de EvidenciesIB",
+    "title" : "API REST EXTERNA de EvidenciesIB - Evidencies",
     "description" : "Conjunt de Serveis REST de EvidenciesIB per ser accedits des de l'exterior",
     "contact" : {
       "name" : "Departament de Govern Digital a la Fundació Bit",
-      "url" : "http://governdigital.fundaciobit.org",
-      "email" : "governdigital@fundaciobit.org"
+      "url" : "https://governdigital.fundaciobit.org",
+      "email" : "otae@fundaciobit.org"
     },
     "license" : {
-      "name" : "License Apache 2.0",
-      "url" : "http://www.apache.org/licenses/LICENSE-2.0"
+      "name" : "European Union Public Licence (EUPL v1.2)",
+      "url" : "https://joinup.ec.europa.eu/sites/default/files/custom-page/attachment/eupl_v1.2_es.pdf"
     },
-    "version" : "1.0.0"
+    "version" : "1.0-SNAPSHOT"
   },
   "externalDocs" : {
     "description" : "Java Client (GovernIB Github)",
-    "url" : "https://github.com/GovernIB/evidenciesib/tree/evidenciesib-1.0/evidenciesib-api-externa-client"
+    "url" : "https://github.com/GovernIB/evidenciesib/tree/evidenciesib-1.0/evidenciesib-api-externa-client-evidencies-v1"
   },
   "servers" : [ {
-    "url" : "/evidenciesibapi/externa",
-    "variables" : { }
+    "url" : "/evidenciesibapi/externa"
   }, {
-    "url" : "http://localhost:8080/evidenciesibapi/externa",
-    "variables" : { }
+    "url" : "http://localhost:8080/evidenciesibapi/externa"
   }, {
-    "url" : "https://dev.caib.es/evidenciesibapi/externa",
-    "variables" : { }
+    "url" : "https://dev.caib.es/evidenciesibapi/externa"
   }, {
-    "url" : "https://proves.caib.es/evidenciesibapi/externa",
-    "variables" : { }
+    "url" : "https://proves.caib.es/evidenciesibapi/externa"
   }, {
-    "url" : "https://se.caib.es/evidenciesibapi/externa",
-    "variables" : { }
+    "url" : "https://se.caib.es/evidenciesibapi/externa"
   }, {
-    "url" : "https://www.caib.es/evidenciesibapi/externa",
-    "variables" : { }
+    "url" : "https://www.caib.es/evidenciesibapi/externa"
   } ],
   "tags" : [ {
     "name" : "Evidencies",
